wired up server

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "api for nousfood",
   "main": "index.js",
   "scripts": {
-    "test": "npm test"
+    "test": "mocha --exit",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
