--- a/package.json
+++ b/package.json
@@ -5,19 +5,26 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --exit",
-    "start": "node server.js"
+    "start": "nodemon server"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
-    "mongoose": "^5.2.4"
+    "jsonwebtoken": "^8.3.0",
+    "mongoose": "^5.2.4",
+    "morgan": "^1.9.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
+    "faker": "^4.1.0",
     "mocha": "^5.2.0"
   }
 }
