--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --exit",
-    "start": "nodemon server"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
